log
Fri May 13 15:24:25 UTC 2022: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:31: error: subscripted value is neither array nor pointer nor vector
             printf("%d ", n[i][j]);
                               ^
Compilation failed
14faddf
